# QALS-cpp

./: .gitignore  CMakeLists.txt  README.md  deploy.sh  requirements.txt  simulate.sh  solver.py
lib/: lib.h  npp.h  tsp.h
rnd/: QRand.py
src/: lib.cpp  main.cpp  npp.cpp
